--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -334,11 +334,6 @@ table {
 	}
 }
 
-img {
-	height: 200px;
-	width: 200px;
-}
-
 #sn-banner {
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -541,6 +536,7 @@ img {
 		}
 
 		img {
+			width: 100%;
 			height: 50px;
 			object-fit: contain;
 		}
@@ -633,82 +629,81 @@ img {
 				object-fit: cover;
 			}
 		}
-		&-details{
-			display: flex;flex-direction: column;
+		&-details {
+			display: flex;
+			flex-direction: column;
 			gap: 1rem;
 
-			h4{
+			h4 {
 				font-size: 24px;
 			}
-			a{
+			a {
 				color: #000;
 				text-decoration: none;
-				transition: .4s;
+				transition: 0.4s;
 
-				&:hover{
+				&:hover {
 					color: orangered;
 				}
-
 			}
 		}
 	}
 }
 
 // ABOUT PAGE
-#about{
-	&-header{
+#about {
+	&-header {
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
-		
+
 		background-image: url(../assets/img/banner.png);
 
-		h2,p{
+		h2,
+		p {
 			color: #fff;
 		}
 	}
 
-	&-head{
+	&-head {
 		display: grid;
-		grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
+		grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 		align-items: center;
 		gap: 2rem;
 		margin-top: 3rem;
 
-		img{
+		img {
 			width: 100%;
 			height: 50vh;
 			object-fit: cover;
 		}
-		.text{
+		.text {
 			display: flex;
 			flex-direction: column;
 			gap: 1rem;
 
-			marquee{
+			marquee {
 				background: #ccc;
-				
 			}
 		}
 	}
-	&-app{
+	&-app {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
 		gap: 1rem;
 		margin-top: 4rem;
 
-		a{
+		a {
 			color: orangered;
 			text-decoration: none;
 		}
 
-		.video{
-			width: clamp(350px,60vw,70vw);
-		
-			
-			video{
+		.video {
+			width: clamp(350px, 60vw, 70vw);
+
+			video {
 				width: 100%;
 				height: 100%;
 				border-radius: 16px;
@@ -718,65 +713,66 @@ img {
 }
 
 // CONTACT PAGE
-#contact-details{
+#contact-details {
 	display: grid;
-	grid-template-columns: repeat(auto-fit,minmax(350px,1fr));
+	grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
 	align-items: center;
 	gap: 2rem;
 	margin-top: 3rem;
-	.details{
+	.details {
 		display: flex;
 		flex-direction: column;
 		gap: 1rem;
 
-		span,h3{
+		span,
+		h3 {
 			color: orangered;
 		}
-
 	}
-	.map{
-		iframe{
+	.map {
+		iframe {
 			width: 100%;
 		}
 	}
 }
 
-#form-details{
+#form-details {
 	display: grid;
-	grid-template-columns: repeat(auto-fit,minmax(350px,1fr));
+	grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
 	gap: 2rem;
 	margin-top: 2rem;
 
-	form{
+	form {
 		display: flex;
 		flex-direction: column;
 		align-items: flex-start;
 		gap: 1rem;
 
-		span{
+		span {
 			color: orangered;
 		}
-		input,textarea{
+		input,
+		textarea {
 			width: 100%;
 			outline: none;
-			padding: .5rem 1rem;
+			padding: 0.5rem 1rem;
 			font-size: 16px;
 			border: 1px solid #a7a7a7;
-			
 		}
-		
-		input::placeholder,textarea::placeholder{
+
+		input::placeholder,
+		textarea::placeholder {
 			color: orangered;
 		}
 	}
-	.form-img{
+	.form-img {
 		display: flex;
 		align-items: center;
 		justify-content: center;
 		width: 100%;
 		height: 100%;
 
-		img{
+		img {
 			width: 100%;
 			height: 80%;
 			object-fit: cover;
@@ -786,54 +782,50 @@ img {
 }
 
 // CART PAGE
-#cart{
+#cart {
 	overflow-x: auto;
 	margin-top: 4rem;
 
-	
-	table{
-		
-		tr{
+	table {
+		tr {
 			display: flex;
 			align-items: center;
 			justify-content: space-between;
 			// padding: 1rem 0;
-			
 
-			td{
-				
+			td {
 				text-align: center;
 				width: 100%;
 				min-width: 100px;
 				padding: 0.4rem;
 
-				input{
+				input {
 					width: 50%;
 				}
 			}
 		}
 	}
 
-	img{
+	img {
 		width: 80px;
-		height:50px;
+		height: 50px;
 		object-fit: cover;
 	}
 
-	&-add{
+	&-add {
 		display: grid;
-		grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
+		grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 		gap: 1rem;
 		margin-top: 4rem;
 
-		#coupon{
+		#coupon {
 			display: flex;
 			flex-direction: column;
 			gap: 1rem;
-			h3{
+			h3 {
 				font-size: 24px;
 			}
-			input{
+			input {
 				margin-bottom: 0.5rem;
 				padding: 0.5rem;
 				width: 60%;
@@ -843,7 +835,7 @@ img {
 			}
 		}
 
-		#subtotal{
+		#subtotal {
 			display: flex;
 			flex-direction: column;
 			align-items: flex-start;
@@ -851,14 +843,67 @@ img {
 			padding: 1rem;
 			border: 1px solid #a1a1a1;
 
-			table{
+			table {
 				border-collapse: collapse;
-				td{
+				td {
 					padding: 1rem;
 					border: 1px solid #a1a1a1;
 					width: 50%;
 				}
 			}
+		}
+	}
+}
+
+#prodetails {
+	display: grid;
+	grid-template-columns: repeat((auto-fit, minmax(300px, 1fr)));
+	align-items: center;
+	gap: 2rem;
+	margin-top: 5rem;
+
+	.single-pro-image {
+		display: flex;
+		flex-direction: column;
+	}
+	.small-img-group {
+		display: flex;
+		width: 100%;
+	}
+	.small-img-col {
+		width: 25%;
+	}
+	.smallimg {
+		width: 100%;
+		height: 100px;
+		object-fit: cover;
+	}
+
+	.single-pro-details {
+		display: flex;
+		flex-direction: column;
+		align-items: start;
+		gap: 1rem;
+
+		h6 {
+			font-size: 14px;
+		}
+		h4 {
+			font-size: 22px;
+		}
+
+		select {
+			padding: 0.5rem;
+		}
+
+		input {
+			text-align: center;
+			width: 40px;
+			height: 40px;
+			font-size: 16px;
+		}
+		p{
+			font-size: 20px;
 		}
 	}
 }
